package com.randioo.owlofwar_server_simplify_protobuf.protocol;

import "Entity.proto";

message MarketShowMarketItemRequest{

}

message MarketShowMarketItemResponse{
	//是否刷新
	optional bool isRefresh = 1;
	//刷新次数
	optional int32 refreshCount = 2;
	//商品目录
	repeated MarketItemData marketItemData = 3;
}

message MarketBuyMarketItemRequest{
	optional int32 index = 1;
}

message MarketBuyMarketItemResponse{
	/**是否购买成功*/
	optional int32 errorCode = 1;
	/**此次购买了多少张*/
	optional int32 buyCount = 2;
	/**今日购买的次数*/
	optional int32 dayBuyCount = 3;
}

//手动刷新
message MarketArtificialRefreshRequest{

}

message MarketArtificialRefreshResponse{
	optional int32 errorCode = 1;
	//刷新次数
	optional int32 refreshCount = 2;
	//商品目录
	repeated MarketItemData marketItemData = 3;
}