package com.randioo.owlofwar_server_simplify_protobuf.protocol;
import "Login.proto";
import "Match.proto";
import "Fight.proto";
import "Pillage.proto";
import "Card.proto";
import "Ping.proto";
import "Market.proto";
import "Role.proto";
import "War.proto";

//38
message SCMessage{
	optional LoginCheckAccountResponse loginCheckAccountResponse=1;
	optional LoginCreateRoleResponse loginCreateRoleResponse=2;
	optional LoginGetRoleDataResponse loginGetRoleDataResponse=3;	
	
	optional SCMatchComplete scMatchComplete = 4;
	optional SCMatchCancel scMatchCancel =5;

	optional FightClientReadyResponse fightClientReadyResponse=6;
	optional SCFightLoadResource scFightLoadResource=7;
	optional FightLoadResourceCompleteResponse fightLoadResourceCompleteResponse=8;
	optional SCFightStartGame scFightStartGame = 9;
	optional FightGameActionResponse fightGameActionResponse = 10;
	optional FightGameOverResponse fightGameOverResponse = 11;
	optional SCFightKeyFrame scFightKeyFrame = 12;
	optional FightGetGameAwardResponse fightGetGameAwardResponse = 13;
	optional FightCountDownResponse fightCountDownResponse = 14;
	optional SCFightCountDown scFightCountDown = 15;

	optional PillageRoleResponse pillageRoleResponse = 16;
	optional PillageCancelResponse pillageCancelResponse = 17;
	optional PillageShowResponse pillageShowResponse = 18;
	optional PillageCompetitionNoticeResponse pillageCompetitionNoticeResponse= 19;
	optional PillagePracticeResponse pillagePracticeResponse = 20;

	optional CardGetCardsInfoResponse cardGetCardsInfoResponse = 21;
	optional CardEditCardListResponse cardEditCardListResponse = 22;
	optional CardLvUpResponse cardLvUpResponse = 23;
	optional CardChooseUseCardListResponse cardChooseUseCardListResponse = 24;
	optional CardChangeMainCardResponse cardChangeMainCardResponse = 25;

	optional PingResponse pingResponse = 26;
	
	//显示商店信息
	optional MarketShowResponse marketShowResponse = 27;
	//购买商品
	optional MarketBuyMarketItemResponse marketBuyMarketItemResponse = 28;
	//手动刷新
	optional MarketArtificialRefreshResponse MarketArtificialRefreshResponse = 29;
	
	//添加金币
	optional SCRoleMoney scRoleMoney = 30;
	//添加银币
	optional SCRoleGold scRoleGold = 31;
	//查询用户信息
	optional RoleInfoSelectResponse roleInfoSelectResponse = 32;
	//增加积分
	optional SCRolePoint scRolePoint = 33;
	
	//显示章节信息
	optional WarShowWarChapterResponse warShowWarChapterResponse = 34;
	//显示建筑信息
	optional WarShowWarBuildResponse WarShowWarBuildResponse = 36;
	//攻打建筑
	optional WarMarchResponse warMarchResponse = 37;

	optional WarGetChapterAwardResponse warGetChapterAwardResponse = 38;
}